--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Run Burger</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
           rel="stylesheet">
-    <link rel="icon" href="/assets/img/LogBur.png">
+    <link rel="icon" href="assets/img/LogBur.png">
 </head>
 <body>
 <section class="modal hidden">
     <div class="modal__content">
-        <img src="/assets/img/close.png" alt="" id="close">
+        <img src="assets/img/close.png" alt="" id="close">
 
         <div class="modal__content--slider">
             <input name="slider" type="radio" id="radio-1" checked>
@@ -24,19 +24,19 @@
 
                 <div class="card" id="card1">
                     <label for="radio-1">
-                        <img src="/assets/img/Hambur_3.png" alt="">
+                        <img src="assets/img/Hambur_3.png" alt="">
                     </label>
                 </div>
                 <div class="card" id="card2">
 
                     <label for="radio-2">
-                        <img src="/assets/img/Ham-Patron.png" alt="">
+                        <img src="assets/img/Ham-Patron.png" alt="">
                     </label>
                 </div>
                 <div class="card" id="card3">
 
                     <label for="radio-3">
-                        <img src="/assets/img/Hambur_2.png" alt="">
+                        <img src="assets/img/Hambur_2.png" alt="">
                     </label>
                 </div>
 
@@ -72,16 +72,16 @@
         </section>
         <section class="side-content">
             <p>Súper Burger</p>
-            <img src="/assets/img/SuperBurger.png" alt="">
-            <img src="/assets/img/SuperBurger.png" alt="" id="under_img">
+            <img src="assets/img/SuperBurger.png" alt="">
+            <img src="assets/img/SuperBurger.png" alt="" id="under_img">
             <div></div>
         </section>
         <section class="footer">
-            <div><img src="/assets/img/Hambur_2.png" alt="hamburger image" id="btn1" class="btn">
+            <div><img src="assets/img/Hambur_2.png" alt="hamburger image" id="btn1" class="btn">
             </div>
-            <div><img src="/assets/img/Ham-Patron.png" alt="hamburger image" id="btn2" class="btn">
+            <div><img src="assets/img/Ham-Patron.png" alt="hamburger image" id="btn2" class="btn">
             </div>
-            <div><img src="/assets/img/Hambur_3.png" alt="hamburger image" id="btn3" class="btn">
+            <div><img src="assets/img/Hambur_3.png" alt="hamburger image" id="btn3" class="btn">
             </div>
         </section>
 
@@ -99,7 +99,7 @@
 <!--Modal-->
 </body>
 
-<script src="/js/index.js">
+<script src="js/index.js">
 
 
 </script>
